using UnityEngine;

[CreateAssetMenu(menuName = "Event Channels/Empty Event Channel")]
public class EmptyEventChannel : EventChannel<Empty> { }