using UnityEngine;

public class EmptyEventListener : EventListener<Empty>
{
    
}
