using UnityEngine;

[CreateAssetMenu(menuName = "Event Channels/PlayerHealthEventChannel")]
public class PlayerHealthEventChannel : EventChannel<IHealth>
{
    
}
