using UnityEngine;

public class PlayerHealthEventListener : EventListener<IHealth>
{
    
}
