using Unity.VisualScripting;
using UnityEngine;

public interface IDamagable
{
    void Damage(int amount);
}
