using UnityEngine;

public interface IHealable
{
    void Heal(int amount);
}
